@@ -1,0 +1,40 @@
+/*
+ * This file is part of PFIXCORE.
+ *
+ * PFIXCORE is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU Lesser General Public License as published by
+ * the Free Software Foundation; either version 2 of the License, or
+ * (at your option) any later version.
+ *
+ * PFIXCORE is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU Lesser General Public License for more details.
+ *
+ * You should have received a copy of the GNU Lesser General Public License
+ * along with PFIXCORE; if not, write to the Free Software
+ * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+ */
+
+package org.pustefixframework.config.contextxmlservice.parser;
+
+import org.pustefixframework.config.contextxmlservice.parser.internal.PageRequestConfigImpl;
+import org.pustefixframework.config.customization.CustomizationAwareParsingHandler;
+import org.pustefixframework.config.generic.ParsingUtils;
+import org.w3c.dom.Element;
+
+import com.marsching.flexiparse.parser.HandlerContext;
+import com.marsching.flexiparse.parser.exception.ParserException;
+
+public class PageRequestDefaultFlowParsingHandler extends CustomizationAwareParsingHandler {
+
+    @Override
+    protected void handleNodeIfActive(HandlerContext context) throws ParserException {
+        PageRequestConfigImpl pageConfig = ParsingUtils.getSingleTopObject(PageRequestConfigImpl.class, context);
+        Element element = (Element) context.getNode();
+        String flow = element.getAttribute("flow");
+        if(flow == null) throw new ParserException("Element 'defaultflow' requires 'flow' attribute."); 
+        pageConfig.setDefaultFlow(flow);
+    }
+
+}
