@@ -1,3 +1,7 @@
+2009-07-09  Martin Leidig  <mleidig@schlund.de>
+
+        Re-added forgotten defaultflow config option for pagerequests.
+
 2009-07-03  Sebastian Marsching <sebastian.marsching@1und1.de>
 
 	First part of new resource framework:
